--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,8 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    display: inline;
 }
-
 header a {
     text-decoration: none;
     color: #fce138;
@@ -41,14 +41,6 @@ header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
-}
-
-header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-    display: inline;
 }
 
 footer {
@@ -97,7 +89,7 @@ section {
     right: 140px;
 }
 
-header h3 {
+.hero-form h3 {
     font-size: 20px;
     margin: 0;
 }
