--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,10 +65,12 @@ footer div {
 footer a {
     color: #024e76;
 }
+
 section {
     padding: 60px;
 }
-/*Hero Style Start*/
+
+/* Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -76,7 +78,7 @@ section {
     background-position: center;
     position: relative;
 }
-/*Hero Style End*/
+/* Hero Style End */
 
 .hero-form {
     border: 3px solid #024e76;
@@ -144,16 +146,21 @@ section {
     width: 15%;
     margin: 10px 0;
 }
+
 .steps h3 {
     color: #024e76;
     font-size: 46px;
     margin-top: 10px;
 }
+
 .steps p {
     color: #39a6b2;
     font-size: 23px;
 }
 
+.steps span {
+    font-size: 38px;
+}
 
 .section-title {
     font-size: 55px;
@@ -163,13 +170,60 @@ section {
     display: inline-block;
     border-bottom: 3px solid;
 }
+
 .primary-border {
     border-color: #fce138;
 }
+
 .secondary-border {
     border-color: #39a6b2;
 }
 
-.steps span {
-    font-size: 38px;
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+    overflow: auto;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+    overflow: auto;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
 }
