--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,3 +250,21 @@ section {
     margin: 30px 0 60px 0;
     color: white;
 }
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+    margin-left: 20px;
+}
+
+.contact-info p, .contact-info address {
+    margin-top: 20px;
+    margin-left: 20px;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
