add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,14 +34,18 @@ header nav {
     margin: 7px 0;
 }
 
-header nav ul li {
-    display: inline;
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 footer {
@@ -127,7 +131,6 @@ section {
     text-align: center;
 }
 
-}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
